# thing-scanner

./: .gitignore  README.md  clearFolders.js  config.js  images.txt  index.js  package-lock.json  package.json  reconstruct.js  server.cert  server.key  system-diagram.pptx  uv_mapping_gen.py
poisson_reconstruction/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  poisson.py
poisson_reconstruction/buil/: CMakeCache.txt  Makefile  cmake_install.cmake
poisson_reconstruction/data/: camera_new.ply
poisson_reconstruction/data/apple_1/: list.txt
poisson_reconstruction/data/detergent/: calibration.h5  metadata.yaml
poisson_reconstruction/data/detergent/clouds/: NP1_0.pcd  NP1_102.pcd  NP1_105.pcd  NP1_108.pcd  NP1_111.pcd  NP1_114.pcd  NP1_117.pcd  NP1_12.pcd  NP1_120.pcd  NP1_123.pcd  NP1_126.pcd  NP1_129.pcd  NP1_132.pcd  NP1_135.pcd  NP1_138.pcd  NP1_141.pcd  NP1_144.pcd  NP1_147.pcd  NP1_15.pcd  NP1_150.pcd  NP1_153.pcd  NP1_156.pcd  NP1_159.pcd  NP1_162.pcd  NP1_165.pcd  NP1_168.pcd  NP1_171.pcd  NP1_174.pcd  NP1_177.pcd  NP1_18.pcd  NP1_180.pcd  NP1_183.pcd  NP1_186.pcd  NP1_189.pcd  NP1_192.pcd  NP1_195.pcd  NP1_198.pcd  NP1_201.pcd  NP1_204.pcd  NP1_207.pcd  (+560 more)
poisson_reconstruction/data/detergent/corners/: NP5_0_corners.txt  NP5_102_corners.txt  NP5_105_corners.txt  NP5_108_corners.txt  NP5_111_corners.txt  NP5_114_corners.txt  NP5_117_corners.txt  NP5_120_corners.txt  NP5_123_corners.txt  (+111 more)
poisson_reconstruction/include/: load_data.h  utils.h
poisson_reconstruction/src/: image-alignment.cpp  load_data.cpp  main.cpp  poisson.cpp
(+143 files in other folders)
